[Fix] -> Selector changed from li.ast-left-align-sub-menu to direct class ast-left-align-sub-menu.

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -2539,10 +2539,10 @@ body {
     left: 100%;
     right: auto;
   }
-  .main-header-menu .sub-menu li.ast-left-align-sub-menu:hover > ul,
-  .main-header-menu .sub-menu li.ast-left-align-sub-menu.focus > ul,
-  .main-header-menu .sub-menu li.ast-left-align-sub-menu:hover * ul,
-  .main-header-menu .sub-menu li.ast-left-align-sub-menu:focus * ul {
+  .main-header-menu .sub-menu .ast-left-align-sub-menu:hover > ul,
+  .main-header-menu .sub-menu .ast-left-align-sub-menu.focus > ul,
+  .main-header-menu .sub-menu .ast-left-align-sub-menu:hover * ul,
+  .main-header-menu .sub-menu .ast-left-align-sub-menu:focus * ul {
     left: -100%;
   }
   .main-header-menu .sub-menu .main-header-menu li.ast-sub-menu-goes-outside:hover > ul,
